buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'idea'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testImplementation {
        exclude group: 'junit', module: 'junit'
    }
}


ext {
    lombokVersion = "1.18.36"
    junitVersion = "5.11.3"
    mockitoVersion = "5.14.2"
    restAssuredVersion = "5.5.0"
    ioVersion = '2.18.0'
    logbackVersion = '1.5.16'
    assertjVersion = '3.26.3'
    hamcrestVersion = '3.0'
    mapstructVersion = '1.6.3'
}



description = "Java Learning and KB project "

compileJava {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}

compileTestJava {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}


jar {
    archiveBaseName = project.name
    archiveVersion = '' // removed as i do not use version
}

version = '5'
// ./gradlew dependencyCheckAnalyze

dependencies {
    implementation "commons-io:commons-io:${ioVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
    implementation "org.simplejavamail:simple-java-mail:5.5.1" //TODO update
    implementation "io.rest-assured:rest-assured:${restAssuredVersion}" //normally should be testCompile
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2' //FIXME added temporarry as json-schema-validator use vulnerable version of databind
    implementation "io.rest-assured:json-schema-validator:${restAssuredVersion}" //normally should be testCompile
    implementation "org.projectlombok:lombok:${lombokVersion}"
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    implementation "org.json:json:20240303"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}" //this need before annotationProcessor for  mapstruct in order to work!
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
    testImplementation 'org.junit.platform:junit-platform-launcher:1.11.3'
    testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testImplementation "com.github.stefanbirkner:system-rules:1.19.0" //junit rules for system package
}

test {
    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // WARNING: A Java agent has been loaded dynamically
    useJUnitPlatform()
}
